Implemented Entity framework and setup the relaion between entities using fluentApi

--- a/E-CommerceFurnitureBackend/appsettings.json
+++ b/E-CommerceFurnitureBackend/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "connection": "data source=DESKTOP-QJT086F; database=Furniture; integrated security=SSPI ;TrustServerCertificate=True"
+  },
   "AllowedHosts": "*"
 }
