implemente jwt token and created action method for add product to wish list

--- a/E-CommerceFurnitureBackend/appsettings.json
+++ b/E-CommerceFurnitureBackend/appsettings.json
@@ -8,5 +8,8 @@
   "ConnectionStrings": {
     "connection": "data source=DESKTOP-QJT086F; database=Furniture; integrated security=SSPI ;TrustServerCertificate=True"
   },
+  "JwtConfig": {
+    "Key": "Complicated random private key. This should have a minimum length"
+  },
   "AllowedHosts": "*"
 }
