started to implement the payment

--- a/E-CommerceFurnitureBackend/appsettings.json
+++ b/E-CommerceFurnitureBackend/appsettings.json
@@ -11,5 +11,9 @@
   "JwtConfig": {
     "Key": "Complicated random private key. This should have a minimum length"
   },
+  "Razorpay": {
+    "Key": "rzp_test_n2WhJM0xSFTrwb",
+    "Secret": "CHWTy65zSjvNR98J1OZ5E8Ac"
+  },
   "AllowedHosts": "*"
 }
